# start_cpp

./: '  .gitignore  CMakeLists.txt  \  build_ccls.sh  compile_commands  compile_commands.json  install.sh  rebuild.sh  remake.sh  run.sh
.cache/clangd/index/: entry.cpp.889B38CDC5BAE577.idx
src/: entry.cpp
src/cpu/: cpu.h
src/gui/: gui.cpp  gui.h
